--- a/product—HC/css/index.css
+++ b/product—HC/css/index.css
@@ -6,26 +6,30 @@
 
 #body {
     width: 1920px;
-    height: 1080px;
 }
 
 .all .Top {
     width: 700px;
     height: 100px;
     background-color: aqua;
-    margin-left: 450px;
+    margin-left: 600px;
 }
 
 .all .Top h1 {
     float: left;
-    margin-left: 200px;
+    margin-left: 300px;
     margin-top: 25px;
+}
+
+.all .bodyMain {
+    width: 1200px;
+    height: 500px;
+    margin-left: 400px;
 }
 
 .all .bodyMain .one {
     width: 200px;
     height: 500px;
-    margin-left: 250px;
     float: left;
 }
 
@@ -46,19 +50,26 @@
 .all .bodyMain .four {
     width: 200px;
     height: 500px;
-    margin-left: 100px;
-    float: left;
+    margin-right: 100px;
+    float: right;
 }
 
 .all .under .underOne {
-    width: 1000px;
+    width: 1100px;
     height: 150px;
-    margin-left: 300px;
+    margin-left: 400px;
     background-color: blue;
     float: left;
 }
 
-.underlast {
+.footer {
+    width: 1000px;
+    height: 50px;
     float: left;
-    margin-left: 300px;
+    margin-left: 150px;
+}
+
+.footer h1 {
+    float: left;
+    margin-left: 700px;
 }
