--- a/product—HC/css/chun.css
+++ b/product—HC/css/chun.css
@@ -14,6 +14,7 @@
     height: 100px;
     background-color: aqua;
     float: left;
+    margin-left: 200px;
 }
 
 .allC .topC .just1 a {
@@ -52,6 +53,7 @@
     height: 900px;
     margin-left: 180px;
     background-color: darkorange;
+    margin-left: 380px;
 }
 
 .allC .bodyAll .hezi1 {
@@ -122,8 +124,14 @@
     margin-top: 150px;
 }
 
-.under {
-    margin-left: 200px;
-    width: 200px;
+.footer {
+    width: 1000px;
     height: 50px;
+    float: left;
+    margin-left: 950px;
+}
+
+.footer h1 {
+    float: left;
+    margin-left: 700px;
 }
